@@ -42,7 +42,6 @@ TODO: Define a maximum QSO upload rate to clublog to avoid excesive API usage.
 </CLUBLOG>
 
 KLog 0.9.2
-TODO: Add a message to show if a Spot/QSO is valid for the current year DX-Marathon
 TODO: When importing an ADIF file with several logs, create automatically the logs as detected.
 TODO: Remove all not needed fields from SetupPageLogNew::gatherAndSend() the type is enough
 TODO: Add an option to auto-complete info (QTH, Locator, Name, QSL Manager(qsl_via), IOTA, AWARD, Entity...) from previously worked QSO.
